--- a/technoid_2025/package.json
+++ b/technoid_2025/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
+    "autoprefixer": "^10.4.19",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "prettier": "^3.3.3",
@@ -41,3 +42,4 @@
   }
 
 }
+
